--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1> Hello world </h1>
+  <h1> Hello world</h1>
   <h2>hello world</h2>
+  <h3>hello world3</h3>
 
   <script src="script.js"></script>
 </body>
